@@ -14,6 +14,7 @@ In Flexible, the "class" would not stick when adding a new region/row/column but
 #570194: Add support for the "checkall" module in the content permissions page.
 #696846: Mini panels conflated displayed title with admin title.
 #889824: Custom class could would cause stylizer class to become malformed.
+Add a simple "Panels" row style to Views that lets you put fields in a panel layout.
 
 Panels 6.x-3.7 (2010-Jul-26)
 ==============
